--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -36,6 +36,38 @@
 		  "sap.m": {}
 		}
 	  },
+	  "routing": {
+		"config": {
+		  "routerClass": "sap.m.routing.Router",
+		  "type": "View",
+		  "viewType": "XML",
+		  "path": "ui5.walkthrough.view",
+		  "controlId": "app",
+		  "controlAggregation": "pages"
+		},
+		"routes": [
+		  {
+			"pattern": "",
+			"name": "overview",
+			"target": "overview"
+		  },
+		  {
+			"pattern": "detail/{invoicePath}",
+			"name": "detail",
+			"target": "detail"
+		  }
+		],
+		"targets": {
+		  "overview": {
+			"id": "overview",
+			"name": "Overview"
+		  },
+		  "detail": {
+			"id": "detail",
+			"name": "Detail"
+		  }
+		}
+	  },
 	  "models": {
 		"i18n": {
 		  "type": "sap.ui.model.resource.ResourceModel",
