--- a/webapp/i18/i18.properties
+++ b/webapp/i18/i18.properties
@@ -14,6 +14,20 @@ invoiceListTitle=Invoices
 invoiceStatusA=New
 invoiceStatusB=In Progress
 invoiceStatusC=Done
+...
+# Invoice List
+invoiceListTitle=Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
+columnQuantity=Quantity
+columnName=Name
+columnSupplier=Supplier
+columnStatus=Status
+columnPrice=Price
+
+# Detail Page
+...
 # Detail Page
 detailPageTitle=Walkthrough - Details
 ratingConfirmation=You have rated this product with {0} stars
