--- a/webapp/i18/i18.properties
+++ b/webapp/i18/i18.properties
@@ -27,10 +27,11 @@ columnStatus=Status
 columnPrice=Price
 
 # Detail Page
-...
 # Detail Page
 detailPageTitle=Walkthrough - Details
 ratingConfirmation=You have rated this product with {0} stars
+dateTitle=Order date
+quantityTitle=Quantity
 
 # Product Rating
 productRatingLabelInitial=Please rate this product
